fix: icon gap & arror alignment

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -125,7 +125,7 @@ nav ul li {
 
 .icon-provider {
   display: flex;
-  gap: 0.3rem;
+  gap: 0.1rem;
 }
 
 /* Scroll bar style */
